--- a/about.html
+++ b/about.html
@@ -53,6 +53,24 @@
 			I will keep posting more important posts on my Website for all of you. Please give your support and love.
 		</p>
 		<hr/>
+		<div class="mainbox">
+		  <div class="content">
+		  <div class="front">
+		    <h1>Ishmit Raj</h1>
+		    <h2>About me</h2>	
+		    <b>TAP HERE TO READ</b>
+		    </div>
+		   <div class="back">
+		     
+		    •I am a frontend and backend web developer.
+		    <br />•I am one of the founder of wedevFB.
+		     <br />•I am mastered many language like python, java, javascript, HTML, CSS.
+		     <br />•I am currently living at Hazaribag,Jharkhand,India.
+		     <br />•My lifestyle is so simple.
+		     
+		   </div> 
+		   </div>
+		</div>
 		<div class="p2div">
 			<p class="p3">
 				Thanks For Visiting Our Site
