--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 		</div>
 		<div class="p2div">
 			<p class="p3">
-				Thanks For Visiting Our Site
+			  <center class="p3">Thanks for visiting our website!</center>
 			</p>
 		</div>
 		<div class="nd">
