--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@ Home
 
 <body>
 <nav class="nav">
-<a href="contact.html" class="a1">
+  <label class="logo">wedevFB</label>
+  <ul class="ul">
+<li><a href="contact.html" class="a1">
 Contact us
-</a>
-<a href="about.html" class="a2">
+</a></li>
+<li><a href="about.html" class="a2">
 About us
-</a>
+</a></li>
+</ul>
 </nav>
+ 
 <div class="marqueediv">
 <marquee scrollamount=5 loop="infinite" direction=left>
 <div class="m1">
