--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Contact us
 <li><a href="about.html" class="a2">
 About us
 </a></li>
+<li><a href="index.html" class="a3">Home</a></li>
 </ul>
 </nav>
  
@@ -52,6 +53,7 @@ Get started
 <div class="os">
 Our services:-
 </div>
+<br />
 <div class="ul">
 <div class="offer">
 (1.) Custom web development
@@ -71,10 +73,10 @@ Our services:-
 <hr class="hradiv" />
 <div class="adiv">
 <a href="contact.html" class="adiv1">
-Contact us
-</a>
+Contact us 
+</a>&nbsp;
 <div class="adiv2">
-today to discuss your project!
+ today to discuss your project!
 </div>
 </div>
 </body>
