--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@ Home
 <nav class="nav">
   <label class="logo">wedevFB</label>
   <ul class="ul">
-<li><a href="contact.html" class="a1">
-Contact us
-</a></li>
-<li><a href="about.html" class="a2">
-About us
-</a></li>
-<li><a href="index.html" class="a3">Home</a></li>
+<div class="home">
+  <li><a href="index.html" class="a3">Home</a></li>
+</div>
+  <div class="contact">
+<li><a href="contact.html" class="a1">Contact us</a></li>    
+  </div>
+<div class="about">
+  <li><a href="about.html" class="a2">About us</a></li>
+</div>
+
 </ul>
 </nav>
  
