--- a/index.html
+++ b/index.html
@@ -8,24 +8,15 @@
 Home
 </title>
 </head>
-
 <body>
-<nav class="nav">
+<nav class="navbar">
   <label class="logo">wedevFB</label>
-  <ul class="ul">
-<div class="home">
-  <li><a href="index.html" class="a3">Home</a></li>
-</div>
-  <div class="contact">
-<li><a href="contact.html" class="a1">Contact us</a></li>    
-  </div>
-<div class="about">
-  <li><a href="about.html" class="a2">About us</a></li>
-</div>
-
-</ul>
+  <ul class="navbar-list">
+    <li class="navbar-item home"><a href="index.html" class="navbar-link">Home</a></li>
+    <li class="navbar-item contact"><a href="contact.html" class="navbar-link">Contact us</a></li>
+    <li class="navbar-item about"><a href="about.html" class="navbar-link">About us</a></li>
+  </ul>
 </nav>
- 
 <div class="marqueediv">
 <marquee scrollamount=5 loop="infinite" direction=left>
 <div class="m1">
