--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="shortcut icon" href="wedevfb-high-resolution-logo-white.png" type="image/x-icon" />
 <link rel="stylesheet" href="index.css" />
 <title>
 Home
@@ -12,9 +13,9 @@ Home
 <nav class="navbar">
   <label class="logo">wedevFB</label>
   <ul class="navbar-list">
-    <li class="navbar-item home"><a href="index.html" class="navbar-link">Home</a></li>
-    <li class="navbar-item contact"><a href="contact.html" class="navbar-link">Contact us</a></li>
-    <li class="navbar-item about"><a href="about.html" class="navbar-link">About us</a></li>
+    <li class="navbar-itemhome"><a href="index.html" class="navbar-link">Home</a></li>
+    <li class="navbar-itemcontact"><a href="contact.html" class="navbar-link">Contact us</a></li>
+    <li class="navbar-itemabout"><a href="about.html" class="navbar-link">About us</a></li>
   </ul>
 </nav>
 <div class="marqueediv">
