--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Home
 </title>
 </head>
 <body>
-<nav class="navbar">
+<nav class="navbar" style="background-color: linear-gradient(to right bottom, #8812df, #6ad416);">
 <label class="logo">wedevFB</label>
 <ul class="navbar-list">
 <li class="navbar-itemhome"><a href="index.html" class="navbar-link">Home</a></li>
