--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@ Home
 </title>
 </head>
 <body>
-<nav class="navbar" style="background-color: linear-gradient(to right bottom, #8812df, #6ad416);">
+<nav class="navbar">
 <label class="logo">wedevFB</label>
+<input type="checkbox" name="checkbox" id="checkbox" />
 <ul class="navbar-list">
 <li class="navbar-itemhome"><a href="index.html" class="navbar-link">Home</a></li>
 <li class="navbar-itemcontact"><a href="contact.html" class="navbar-link">Contact us</a></li>
