--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ Home
 <body>
 <nav class="navbar">
 <label class="logo">wedevFB</label>
-<input type="checkbox" name="checkbox" id="checkbox" />
+<div class="check">
+<input type="checkbox" name="checkbox" id="checkbox" /></div>
 <ul class="navbar-list">
 <li class="navbar-itemhome"><a href="index.html" class="navbar-link">Home</a></li>
 <li class="navbar-itemcontact"><a href="contact.html" class="navbar-link">Contact us</a></li>
