--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ Home
 <nav class="navbar">
 <label class="logo">wedevFB</label>
 <div class="check">
-<input type="checkbox" name="checkbox" id="checkbox" /></div>
+<input type="checkbox" name="checkbox" id="checkbox" />
+</div>
 <ul class="navbar-list">
 <li class="navbar-itemhome"><a href="index.html" class="navbar-link">Home</a></li>
 <li class="navbar-itemcontact"><a href="contact.html" class="navbar-link">Contact us</a></li>
